--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -46,7 +46,7 @@
                         <a class="dropdown-item" href="/clients/ui/add">Add</a>
                         <a class="dropdown-item" href="/clients/ui/display">Display all</a>
                     </div>
-                </li><li class="nav-item"><a href="car.html" class="nav-link">Cars</a></li>
+                </li><li class="nav-item"><a href="/voitures/ui/" class="nav-link">Cars</a></li>
                 <li class="nav-item"><a href="blog.html" class="nav-link">Rents</a></li>
                 <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
             </ul>
